<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/escriba_los_acres_de_superficie_de_su_isla"
        android:textAlignment="center"
        android:textColor="@color/colorMain"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:autofillHints="ACRES"
        android:ems="6"
        android:focusedByDefault="true"
        android:inputType="number" />

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/elija_el_continente"
        android:textColor="@color/colorMain"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/europa" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/am_rica" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asia" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ocenia" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/africa" />
    </RadioGroup>

    <Button
        android:id="@+id/button_calcu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/grupo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorMain"
        android:drawableStart="@drawable/ic_isla_2"
        android:padding="20dp"
        android:text="@string/calcular"
        android:textColor="@color/colorWhite" />
</RelativeLayout>