<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_CL"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.gesture.GestureOverlayView
        android:id="@+id/gesture_detector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gestureColor="#00000000"
        android:uncertainGestureColor="#00000000"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/profile_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/almarjan" />

                <TextView
                    android:id="@+id/profile_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/textview"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/profile_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <TextView
                    android:id="@+id/profile_location"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/textview"
                    app:layout_constraintBottom_toTopOf="@+id/profile_size"
                    app:layout_constraintStart_toStartOf="@+id/profile_title"
                    app:layout_constraintTop_toBottomOf="@+id/profile_title" />

                <TextView
                    android:id="@+id/profile_size"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/textview"
                    app:layout_constraintStart_toStartOf="@+id/profile_location"
                    app:layout_constraintTop_toBottomOf="@+id/profile_location" />

                <SeekBar
                    android:id="@+id/profile_seekBar"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:max="2000"
                    android:progress="0"
                    android:progressTint="@color/colorMain2"
                    android:thumbTint="@color/colorMain"
                    app:layout_constraintBottom_toTopOf="@+id/profile_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <Button
                    android:id="@+id/profile_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorMain"
                    android:elevation="15dp"
                    android:text="@string/enviar_oferta"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/profile_button_2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_seekBar" />

                <TextView
                    android:id="@+id/profile_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/textview"
                    android:textColor="@color/colorMain"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/elija_el_total_a_ofertar"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/profile_size"
                    app:layout_constraintTop_toBottomOf="@+id/profile_size" />

                <TextView
                    android:id="@+id/profile_oferta"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/_0"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView8" />

                <Button
                    android:id="@+id/profile_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancelar"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/profile_button"
                    app:layout_constraintTop_toTopOf="@+id/profile_button" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.gesture.GestureOverlayView>

</android.support.design.widget.CoordinatorLayout>